--- a/main/Index.html
+++ b/main/Index.html
@@ -6,6 +6,7 @@
 <head>
     <title>Casino ;)</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script async defer src="script.js"></script>
 </head>
 <body>
@@ -16,5 +17,7 @@
     </div>
     <br><br>
     <center><button id="startButton"> Start </button></center>
+
+    <div> <p>Participant 1: <span class="text-success">Winner</span></p></div>
 </body>
 </html>
